@@ -27,6 +27,8 @@
 
 #include <glib/gi18n.h>
 #include <gconf/gconf-client.h>
+#include "recent-files/egg-recent-view.h"
+#include "recent-files/egg-recent-view-uimanager.h"
 
 #include "ui-util.h"
 #include "ui-commands.h"
@@ -34,6 +36,7 @@
 #include "prefs.h"
 #include "stock.h"
 #include "window.h"
+#include "recent.h" 
 
 #include "debug.h"
 
@@ -74,6 +77,9 @@ static void menu_item_select_cb            (GtkMenuItem     *proxy,
 
 static void menu_item_deselect_cb          (GtkMenuItem     *proxy,
 					    glWindow        *window);
+
+static char *recent_tooltip_func           (EggRecentItem   *item,
+					    gpointer         user_data);
 
 
 
@@ -718,6 +724,7 @@ gl_ui_new (glWindow *window)
 	GtkUIManager            *ui;
 	GtkActionGroup          *actions;
 	GError                  *error = NULL;
+	EggRecentViewUIManager  *recent_view;
 
 	gl_debug (DEBUG_UI, "START");
 
@@ -756,6 +763,17 @@ gl_ui_new (glWindow *window)
 	/* Set view grid and markup visibility according to prefs */
 	set_view_style (ui);
 		
+	/* add an eggRecentView */
+        recent_view  =
+		egg_recent_view_uimanager_new (ui,
+					       "/ui/MenuBar/FileMenu/FileRecentsMenu/FileRecentsPlaceHolder",
+					       G_CALLBACK (gl_ui_cmd_file_open_recent),
+					       window);
+	egg_recent_view_uimanager_show_icons (recent_view, FALSE);
+	egg_recent_view_uimanager_set_tooltip_func (recent_view, recent_tooltip_func, NULL);
+	egg_recent_view_set_model (EGG_RECENT_VIEW (recent_view), gl_recent_get_model ());
+	g_object_set_data (G_OBJECT (ui), "recent-view", recent_view);
+
 	gl_ui_util_set_verb_list_sensitive (ui, doc_verbs, FALSE);
 
 	gl_debug (DEBUG_UI, "END");
@@ -769,7 +787,15 @@ gl_ui_new (glWindow *window)
 void
 gl_ui_unref (GtkUIManager *ui)
 {
+	GObject *recent_view;
+
 	gl_debug (DEBUG_UI, "START");
+
+	/* Pull out recent view to unreference. */
+	recent_view = g_object_get_data (G_OBJECT(ui), "recent-view");
+	if (recent_view) {
+		g_object_unref (recent_view);
+	}
 
 	g_object_unref(ui);
 
@@ -1124,4 +1150,24 @@ menu_item_deselect_cb (GtkMenuItem *proxy,
 	gtk_statusbar_pop (GTK_STATUSBAR (window->status_bar),
 			   window->menu_tips_context_id);
 }
+
+/*---------------------------------------------------------------------------*/
+/* PRIVATE.  Tooltip function for recent file menu items.                    */
+/*---------------------------------------------------------------------------*/
+static char *
+recent_tooltip_func (EggRecentItem *item, gpointer user_data)
+{
+	char *tip;
+	char *uri_for_display;
+
+	uri_for_display = egg_recent_item_get_uri_for_display (item);
+	g_return_val_if_fail (uri_for_display != NULL, NULL);
+
+	tip = g_strdup_printf (_("Open '%s'"), uri_for_display);
+
+	g_free (uri_for_display);
+
+	return tip;
+}
+
 
